# tensorflow-learning

./: .gitignore  README.md  pyproject.toml  setup.sh  verify_gpu.py
scripts/: test_calc.py
scripts/chapter3/: logistic_regression.py  logistic_regression_multilayer.py  mlp_logistic_tensorboard.py  scope.py  scope_keras.py  scope_out_example.md  session.py
